[svn r31083] work on URLUtils to iron out problems persisting WorldImageService entries in the catalog